# NeuroticNetwork

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md  makefile  makefile.common  neuron.c  neuron.h  nw0.txt  nw1.txt  nw10.txt  nw11.txt  nw12.txt  nw2.txt  nw3.txt  nw4.txt  nw5.txt  nw6.txt  nw7.txt  nw8.txt  nw9.txt  plot_weights.m  plot_weights_v1.m  plot_weights_v2.m
src/: .gitignore  CMakeLists.txt  Net test.c  Net_test.c  essentials.c  essentials.h  makefile  network.c  network.h  neuron.c  neuron.h  nn_config.h.in
